--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-   <a-scene embedded arjs>
-       <a-marker preset="hiro" id="aframe-scene" visible>
-          <a-box color="red" position="0 0 0" rotation="-90 0 0" width="1" height="1" depth="1"></a-box>
-       </a-marker>
-   </a-scene>
+  <a-scene embedded arjs>
+      <a-marker preset="hiro" id="aframe-scene" visible>
+          <a-box color="red" width="1" height="1" depth="1"></a-box>
+      </a-marker>
+  </a-scene>
 </body>
 </html>
