--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
