--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style='margin: 0px; overflow: hidden;'>
   <a-scene embedded arjs>
-      <a-marker preset="hiro" id="aframe-scene" visible>
+      <a-marker preset="hiro" id="aframe-scene" visible scale="1 1 1">
           <a-box color="red" width="1" height="1" depth="1"></a-box>
       </a-marker>
   </a-scene>
