--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AR.js Cube Example</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
-<body style='margin: 0px; overflow: hidden;'>
-  <a-scene embedded arjs>
-      <a-marker preset="hiro" id="aframe-scene" visible scale="1 1 1">
-          <a-box color="red" width="1" height="1" depth="1"></a-box>
-      </a-marker>
-  </a-scene>
+<body>
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <a-box position="0 0.5 0" material="color: blue;"></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
 </body>
 </html>
+
